agregue un script No2

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,9 @@
     <title>Document</title>
 
 </head>
-<body>
 
-    <script>
-        let date = new Date()
-        document.body.innerHTML="<h1> hoy es: " + date + "<h1>"
-    </script>
-    <h2>Buenas tardes</h2>    
+<body>
+    <h2>Buenas tardes</h2>
+    <script src="/src/js/script2.js"> </script>
 </body>
 </html>
