--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
 
 <body>
     <h2>Buenas tardes</h2>
-    <script src="/src/js/script2.js"> </script>
+    <script src="/src/js/ejercicio.js"> </script>
 </body>
+
 </html>
